--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: test_project_api CI
+name: test_project_web CI
 
 on:
   push:
@@ -44,6 +44,35 @@ jobs:
       run: |
         apt-get update
         apt-get -yqq install libpq-dev postgresql-client
+    - name: Install Chromedriver
+      run: apt-get -yqq install chromium-chromedriver
+
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - name: "Install yarn"
+      run: npm install -g yarn
+
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - name: Set up Yarn cache
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+
+    - name: Set up Node cache
+      uses: actions/cache@v2
+      id: node-cache # use this to check for `cache-hit` (`steps.node-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: '**/node_modules'
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
     - name: Set up Crystal cache
       uses: actions/cache@v2
       id: crystal-cache
@@ -60,6 +89,11 @@ jobs:
       if: steps.crystal-cache.outputs.cache-hit != 'true'
       run: shards check || shards install
 
+    - name: Install yarn packages
+      if: steps.node-cache.outputs.cache-hit != 'true'
+      run: yarn install --frozen-lockfile --no-progress
+    - name: Compiling assets
+      run: yarn prod
 
     - name: Build lucky_tasks
       if: steps.crystal-cache.outputs.cache-hit != 'true'
